2005-09-22  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/demo.py (Demo.again): fix bug where again() blocks after
	finishing.

	* IPython/genutils.py (shlex_split): moved from Magic to here,
	where all 2.2 compatibility stuff lives.  I needed it for demo.py.

	* IPython/demo.py (Demo.__init__): added support for silent
	blocks, improved marks as regexps, docstrings written.
	(Demo.__init__): better docstring, added support for sys.argv.

	* IPython/genutils.py (marquee): little utility used by the demo
	code, handy in general.

	* IPython/demo.py (Demo.__init__): new class for interactive
	demos.  Not documented yet, I just wrote it in a hurry for
	scipy'05.  Will docstring later.

2005-09-20  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/Shell.py (sigint_handler): Drastic simplification which
	also seems to make Ctrl-C work correctly across threads!  This is
	so simple, that I can't beleive I'd missed it before.  Needs more
	testing, though.
	(KBINT): Never mind, revert changes.  I'm sure I'd tried something
	like this before...

	* IPython/genutils.py (get_home_dir): add protection against
	non-dirs in win32 registry.

	* IPython/iplib.py (InteractiveShell.alias_table_validate): fix
	bug where dict was mutated while iterating (pysh crash).

2005-09-06  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/iplib.py (handle_auto): Fix inconsistency arising from
	spurious newlines added by this routine.  After a report by
	F. Mantegazza.

2005-09-05  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/Shell.py (hijack_gtk): remove pygtk.require("2.0")
	calls.  These were a leftover from the GTK 1.x days, and can cause
	problems in certain cases (after a report by John Hunter).

	* IPython/iplib.py (InteractiveShell.__init__): Trap exception if
	os.getcwd() fails at init time.  Thanks to patch from David Remahl
	<chmod007 AT mac.com>.
	(InteractiveShell.__init__): prevent certain special magics from